syntax = "proto3";

option csharp_namespace = "ApiGateway.Grpc";

package HomeApp;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Measurement {
    int32 id = 1;
    int32 device_id = 2;
    string data = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message GetCurrentRequest {
    int32 deviceId = 1;
}

message MeasurementResponse {
    Measurement measurement = 1;
}

message ListDayRequest {
    int32 device_id = 1;
}

message MeasurementListResponse {
    repeated MeasurementResponse measurements = 1;
}

message CreateMeasurementRequest {
    int32 device_id = 1;
    string data = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message CreateMeasurementByFriendlyNameRequest {
    string friendly_name = 1;
    string data = 2;
    google.protobuf.Timestamp timestamp = 3;
}

service MeasurementService {
    rpc GetCurrent (GetCurrentRequest) returns (MeasurementResponse) {}
    rpc ListDay (ListDayRequest) returns (MeasurementListResponse) {}
    rpc CreateMeasurement (CreateMeasurementRequest) returns (google.protobuf.Empty) {}
    rpc CreateMeasurementByFriendlyName (CreateMeasurementByFriendlyNameRequest) returns (google.protobuf.Empty) {}
}